--- a/7-guia/ejercicios-7/ej-1-7.tex
+++ b/7-guia/ejercicios-7/ej-1-7.tex
@@ -65,11 +65,15 @@
           i = 10,\, j = 9\\
           \o\\
           i = 9,\, j = 10\\
-        }$\\
+        }$
 
         $\llamada2$: porque estoy multiplicando el mismo polinomio, $a_i = b_i$. Pero lo dejo distinto para hacerlos \textit{visualmente} más genérico.\\
 
         $\llamada3$: Idem $\llamada1$ para el polinomio $f$
 
-        \textit{grado: 19 }\\
+        \textit{grado: 19 }
 \end{enumerate}
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
