--- a/7-guia/ejercicios-7/ej-6-7.tex
+++ b/7-guia/ejercicios-7/ej-6-7.tex
@@ -1,4 +1,4 @@
-\ejercicio
+\begin{enunciado}{\ejercicio}
 
 \textit{\underline {Definición}:} Sea $K$ un cuerpo y sea $h \en \K[X]$ un polinomio no nulo. Dados $f,g \en \K[X]$,
 se dice que $f$ es congruente a $g$ módulo $h$ si $h \divideA f-g$. En tal caso se escribe $\congruencia{f}{g}{h}$.
@@ -18,7 +18,7 @@ se dice que $f$ es congruente a $g$ módulo $h$ si $h \divideA f-g$. En tal caso
 	\item Probar que $r$ es el resto de la división de $f$ por $h$ si y solo si $\congruencia{f}{r}{h}$ y $r=0$ o $\gr(r) < \gr(h)$.
 \end{enumerate}
 
-\separadorCorto
+\end{enunciado}
 
 \begin{enumerate}[label=\roman*)]
 	\item uff... \quad
@@ -110,3 +110,7 @@ se dice que $f$ es congruente a $g$ módulo $h$ si $h \divideA f-g$. En tal caso
 	\item \hacer
 
 \end{enumerate}
+
+\begin{aportes}
+\item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
