--- a/7-guia/ejercicios-7/ej-7-7.tex
+++ b/7-guia/ejercicios-7/ej-7-7.tex
@@ -1,4 +1,4 @@
-\ejercicio
+\begin{enunciado}{\ejercicio}
 
 Hallar el resto de la división de $f$ por $g$ para:
 
@@ -13,7 +13,7 @@ Hallar el resto de la división de $f$ por $g$ para:
 	      (Sugerencia ver \refEjercicio{ej:cong} \ref{item})).
 \end{enumerate}
 
-\separadorCorto
+\end{enunciado}
 
 \begin{enumerate}[label=\roman*)]
 	\item $g \divideA g \sisolosi \congruencia{X^{31} - 2}{ 0 }{X^{31} - 2} \sisolosi \congruencia{X^{31}}{2}{g}$
@@ -76,3 +76,8 @@ Hallar el resto de la división de $f$ por $g$ para:
 		      \boxed{\congruencia{f}{0}{g}}$
 
 \end{enumerate}
+
+
+\begin{aportes}
+\item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
