fix copy paste falopa extra 11 guia 5

--- a/5-guia/ejercicios-5-extra/ej-extra-11-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-11-5.tex
@@ -97,7 +97,7 @@ Arranco a analizar con cada uno de los  $p \en \set{2, 3, 5, 7, 23, 29}$ en part
         $$
           \congruencia{1^6}{0}{3}
           \sii
-          \congruencia{0}{0}{5}
+          \congruencia{1}{0}{3}
         $$
         $p = 3$ \underline{no cumple}.
 
@@ -121,6 +121,6 @@ $$
 $$
 
 \begin{aportes}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{https://github.com/daniTadd}{Dani Tadd \github}
 \end{aportes}
