--- a/7-guia/ejercicios-7/ej-4-7.tex
+++ b/7-guia/ejercicios-7/ej-4-7.tex
@@ -58,10 +58,11 @@
         $$
         también lo sea. Arranco las cuentulis:
         $$
-          \scriptstyle
+          \textstyle
           (X-1) \cdot \sumatoria{j=0}{k} X^j =
           (X-1) \cdot (\sumatoria{j=0}{\blue{k-1}} X^j + X^{\blue{k}} ) =
-          \ub{\scriptstyle (X-1) \cdot \sumatoria{j=0}{k-1} X^j }{\purple{HI}} + (X - 1) \cdot X^k =
+          (X-1) \cdot \sumatoria{j=0}{k-1} X^j  + (X - 1) \cdot X^k
+          \igual{\purple{HI}}
           \purple{X^k - 1} + X^{k+1} - X^k = X^{k+1} - 1
         $$
 
