--- a/7-guia/ejercicios-7/ej-9-7.tex
+++ b/7-guia/ejercicios-7/ej-9-7.tex
@@ -1,47 +1,91 @@
-\ejercicio
-Calcular el máximo común divisor entre $f$ y $g$ en $\racionales[X]$ y escribirlo como combinación
-polinomial de $f$ y $g$ siendo:
-%Macro Local
-\def\f1{X^5 + X^3 - 6X^2 + 2X +2}
-\def\g1{X^4 - X^3 - X^2 + 1}
+\begin{enunciado}{\ejercicio}
+  Calcular el máximo común divisor entre $f$ y $g$ en $\racionales[X]$ y escribirlo como combinación
+  polinomial de $f$ y $g$ siendo:
+  %Macro Local
+  \def\f1{X^5 + X^3 - 6X^2 + 2X +2}
+  \def\g1{X^4 - X^3 - X^2 + 1}
+  \begin{enumerate}[label=\roman*)]
+    \item $f = \f1$, $g = \g1$,
+
+    \item $f = X^6 + X^4 + X^2  +1$, $g = X^3 + X$,
+
+    \item $f = 2X^6 - 4X^5 + X^4 + 4X^3 - 6X^2 + 4X + 1$, $g = X^5 - 2X^4 + 2X^2 - 3X + 1$,
+  \end{enumerate}
+\end{enunciado}
+
 \begin{enumerate}[label=\roman*)]
-	\item $f = \f1$, $g = \g1$,
+  \item Hacemos la división hermosa de polinomios:
+        $$
+          \divPol{X^5 + X^3 - 6X^2 + 2X +2}{X^4 - X^3 - X^2 + 1}
+        $$
 
-	\item $f = X^6 + X^4 + X^2  +1$, $g = X^3 + X$,
+        Todo muy lindo. Según Euclides:
+        $$
+          (f : g) = (\ub{X^4 - X^3 - X^2 + 1}{g} : 3X^3 -55X^2 +X + 1)
+        $$
+        Escribo a $f$ en función de $g$:
+        $$
+          f = (X+1) \cdot (X^4 - X^3 - X^2 + 1) + 3X^3 -55X^2 +X + 1
+        $$
+        Otra vez:
+        $$
+          \divPol{X^4 - X^3 - X^2 + 1}{3X^3 -5X^2 +X + 1}
+        $$
+        y otra vez... ?:
+        $$
+          \divPol{3X^3 -5X^2 +X + 1}{- \frac{2}{9}X^2-\frac{5}{9}X+\frac{7}{9}}
+        $$
+        \textit{...da fuck is this?}
+        $$
+          \divPol{- \frac{2}{9}X^2-\frac{5}{9}X+\frac{7}{9}}{\frac{171}{4}X - \frac{171}{4}}
+        $$
 
-	\item $f = 2X^6 - 4X^5 + X^4 + 4X^3 - 6X^2 + 4X + 1$, $g = X^5 - 2X^4 + 2X^2 - 3X + 1$,
+        Todo lindo:
+        $$
+          \mcd{X^5 + X^3 - 6X^2 + 2X +2}{X^4 - X^3 - X^2 + 1}
+        $$
+
+        El MCD será el \textit{\underline{último resto no nulo y mónico}}:
+        $$
+          \cajaResultado{
+            (f : g) = X - 1
+          }
+        $$
+
+  \item Este es más humano:
+        $$
+          \mcd{X^6 + X^4 + X^2  +1}{X^3 + X}
+        $$
+
+        El MCD será el último resto no nulo y mónico:
+        $$
+          \cajaResultado{ (f : g) = X^2+1}
+        $$
+        El MCD escrito como combinación polinomial de $f$ y $g$:
+        $$
+          \cajaResultado{ X^2 + 1 = f \cdot 1 + g \cdot (-X^3)}
+        $$
+
+  \item
+        Euclides nuevamente:
+        $$
+          \mcd{2X^6 - 4X^5 + X^4 + 4X^3 - 6X^2 + 4X + 1}{X^5 - 2X^4 + 2X^2 - 3X + 1}
+        $$
+        El MCD será el último resto no nulo y \textit{mónico}:
+        $$
+          \cajaResultado{
+            (f : g) = 1
+          }
+        $$
+        El MCD escrito como combinación polinomial de $f$ y $g$:
+        $$
+          \cajaResultado{
+            1 = \frac{1}{3} g \cdot(2X^2-4X+1) - \frac{1}{3} f \cdot (X-2)
+          }
+        $$
+
 \end{enumerate}
 
-\separadorCorto
-
-\begin{enumerate}[label=\roman*)]
-	\item
-	      \divPol{X^5 + X^3 - 6X^2 + 2X +2}{X^4 - X^3 - X^2 + 1}
-
-	      $\flecha{Euclides} (f:g) = (g : 3X^3 -55X^2 +X + 1)\\
-		      \flecha{escribo a $f$}[en función de $g$]
-		      f = (X+1) \cdot g + 3X^3 -55X^2 +X + 1$
-
-	      \divPol{X^4 - X^3 - X^2 + 1}{3X^3 -5X^2 +X + 1}
-
-	      \divPol{3X^3 -5X^2 +X + 1}{- \frac{2}{9}X^2-\frac{5}{9}X+\frac{7}{9}}
-
-	      \divPol{- \frac{2}{9}X^2-\frac{5}{9}X+\frac{7}{9}}{\frac{171}{4}X - \frac{171}{4}}
-
-	      \mcd{X^5 + X^3 - 6X^2 + 2X +2}{X^4 - X^3 - X^2 + 1}
-
-	      El MCD será el último resto no nulo y mónico \boxed{\to (f : g) = X-1}\\
-
-	\item \mcd{X^6 + X^4 + X^2  +1}{X^3 + X}\\
-
-	      El MCD será el último resto no nulo y mónico $\to$\boxed{ (f : g) = X^2+1}\\
-	      El MCD escrito como combinación polinomial de $f$ y $g \to$ \boxed{ X^2 + 1 = f \cdot 1 + g \cdot (-X^3)}
-
-	\item
-	      $\flecha{Haciendo}[Euclides]$
-
-	      \mcd{2X^6 - 4X^5 + X^4 + 4X^3 - 6X^2 + 4X + 1}{X^5 - 2X^4 + 2X^2 - 3X + 1}\\
-	      El MCD será el último resto no nulo y \textit{mónico} $\to$ \boxed{(f : g) = 1}\\
-	      El MCD escrito como combinación polinomial de $f$ y $g \to$ \boxed{1 = \frac{1}{3} g \cdot(2X^2-4X+1) - \frac{1}{3} f \cdot (X-2)}\\
-
-\end{enumerate}
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
