add extra 6 guia 6

--- a/7-guia/ejercicios-7/ej-11-7.tex
+++ b/7-guia/ejercicios-7/ej-11-7.tex
@@ -44,12 +44,12 @@ $$
     \flecha{$n$}[impar] &
     \matriz{cc|c}{
       1 & 1 & 2  \\
-      1 & -1 & 1 \\
+      1 & -1 & 1
     }
     \sii
     \matriz{cc|c}{
       1 & 0 & \frac{3}{2}  \\
-      0 & 1 & \frac{1}{2} \\
+      0 & 1 & \frac{1}{2}
     }
     &\to&
     \cajaResultado{
@@ -59,12 +59,12 @@ $$
     \flecha{$n$}[par] &
     \matriz{cc|c}{
       1 & 1 & 2  \\
-      1 & -1 & 0 \\
+      1 & -1 & 0
     }
     \sii
     \matriz{cc|c}{
       1 & 0 & 1  \\
-      0 & 1 & 1 \\
+      0 & 1 & 1 
     }
     &\to&
     \cajaResultado{
