add extra 14 guia 7

--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -315,6 +315,14 @@
   \end{minipage}\par
 }
 
+%%% Emoticones
+\def\meh{\faIcon[regular]{meh}}
+\def\mehBlank{\faIcon[regular]{meh-blank}}
+\def\rollingEyes{\faIcon[regular]{meh-rolling-eyes}}
+\def\surprise{\faIcon[regular]{surprise}}
+
+
+
 %%% (☞⌐▀͡ ͜ʖ͡▀ )☞ Yo mama
 \def\superIdol{https://www.youtube.com/watch?v=DKpaKHUlyBY}
 \def\videosTeresa{https://www.youtube.com/@AlgebraIC-gu7oc/videos}
