--- a/7-guia/ejercicios-7-extra/ej-extra-14-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-14-7.tex
@@ -1,116 +1,115 @@
 \begin{enunciado}{\ejExtra}
-	Sea $f = X^5 - \big(\frac{1}{2} + \frac{\sqrt{3}}{2}i \big)$.
-	\begin{enumerate}[label=\alph*)]
-		\item Probar que $ f \divideA X^{30} - 1$
-		\item Hallar el polinomio $g \en \reales[X]$ mónico de grado mínimo tal que $f \divideA g$.
-	\end{enumerate}
+  Sea $f = X^5 - \big(\frac{1}{2} + \frac{\sqrt{3}}{2}i \big)$.
+  \begin{enumerate}[label=\alph*)]
+    \item Probar que $ f \divideA X^{30} - 1$
+    \item Hallar el polinomio $g \en \reales[X]$ mónico de grado mínimo tal que $f \divideA g$.
+  \end{enumerate}
 \end{enunciado}
 
 \begin{enumerate}[label=\alph*)]
-	\item
-	      Las raíces de $f$:
-	      $$
-		      X^5 - (\frac{1}{2} + \frac{\sqrt{3}}{2}i ) = 0
-		      \sii X^5 = e^{i \frac{\pi}{3}}
-		      \Sii{\red{!!}}
-		      X \en
-		      \set{
-			      e^{i \frac{1}{15} \pi},
-			      e^{i \frac{7}{15} \pi},
-			      e^{i \frac{13}{15} \pi},
-			      e^{i \frac{19}{15} \pi},
-			      e^{i \frac{5}{3} \pi}
-		      }
-	      $$
+  \item
+        Las raíces de $f$:
+        $$
+          X^5 - (\frac{1}{2} + \frac{\sqrt{3}}{2}i ) = 0
+          \sii X^5 = e^{i \frac{\pi}{3}}
+          \Sii{\red{!!}}
+          X \en
+          \set{
+            e^{i \frac{1}{15} \pi},
+            e^{i \frac{7}{15} \pi},
+            e^{i \frac{13}{15} \pi},
+            e^{i \frac{19}{15} \pi},
+            e^{i \frac{5}{3} \pi}
+          }
+        $$
 
-	      Si $X^5 - (\frac{1}{2} + \frac{\sqrt{3}}{2}i )  \divideA X^{30} - 1$,
-	      entonces  las raíces de $f$ también deben ser raíces de $X^{30} - 1$.
+        Si $X^5 - (\frac{1}{2} + \frac{\sqrt{3}}{2}i )  \divideA X^{30} - 1$,
+        entonces  las raíces de $f$ también deben ser raíces de $X^{30} - 1$.
 
-	      Observad que:
-	      $$
-		      X^{30} - 1 =
-		      (X^{15} - 1) \cdot (X^{15} + 1) =
-	      $$
-	      Y ya veo tu cara así {\Large \surprise}! Sí, todos los elementos de $G_{15}$ son raíces de $G_{30}$
+        Observad que:
+        $$
+          X^{30} - 1 =
+          (X^{15} - 1) \cdot (X^{15} + 1) =
+        $$
+        Y ya veo tu cara así {\Large \surprise}! Sí, todos los elementos de $G_{15}$ son raíces de $G_{30}$
 
-	      \bigskip
-	      \begin{center}
-		      En general,:
-		      $$
-			      \text{Si se tienen 2 conjuntos }  G_n \ytext G_m \quad \text{con} \quad m \divideA n
-			      \entonces
-			      G_m \subseteq G_n
-		      $$
-	      \end{center}
+        \bigskip
+        \begin{center}
+          En general,:
+          $$
+            \text{Si se tienen 2 conjuntos }  G_n \ytext G_m \quad \text{con} \quad m \divideA n
+            \entonces
+            G_m \subseteq G_n
+          $$
+        \end{center}
 
-	      \bigskip
-	      Todas la raíces de $f$ están en $G_{15}$, así que $f \divideA X^{30} - 1$
+        \bigskip
+        Todas la raíces de $f$ están en $G_{15}$, así que $f \divideA X^{30} - 1$
 
-	      \bigskip
+        \bigskip
 
-	      \textit{Versión de galera y bastón:}
-	      La versión más elegante, pero que no se me ocurre ni a palos:
-	      Sabemos que:
-	      $$
-		      \begin{array}{rcl}
-			      x - \Big(\frac{1}{2} + \frac{\sqrt{3}}{2}i \Big) \divideA x^6 - \Big(\frac{1}{2} + \frac{\sqrt{3}}{2}i\Big)^6
-			       & \Entonces{$x \to X^5$}[$a \to \alpha$] &
-			      X^5 - \Big(\frac{1}{2} + \frac{\sqrt{3}}{2}i \Big) \divideA (X^{5})^6 - \Big(\frac{1}{2} + \frac{\sqrt{3}}{2}i \Big)^6 \\
-			       & \Sii{\red{!!}}                         &
-			      X^5 - \Big(\frac{1}{2} + \frac{\sqrt{3}}{2}i \Big) \divideA X^{30} - 1
-		      \end{array}
-	      $$
-	      Por ende el polinio $f$ divide a $X^{30} - 1$.
+        \textit{Versión de galera y bastón:}
+        La versión más elegante, pero que no se me ocurre primero ni a palos (mirá el ejercicio \ref{ej:8} {\tiny$\ot$ click}):
+        Sabemos que:
+        $$
+          \begin{array}{rcl}
+            x - \Big(\frac{1}{2} + \frac{\sqrt{3}}{2}i \Big) \divideA x^6 - \Big(\frac{1}{2} + \frac{\sqrt{3}}{2}i\Big)^6
+             & \Entonces{$x \to X^5$}[$a \to \alpha$] &
+            X^5 - \Big(\frac{1}{2} + \frac{\sqrt{3}}{2}i \Big) \divideA (X^{5})^6 - \Big(\frac{1}{2} + \frac{\sqrt{3}}{2}i \Big)^6 \\
+             & \Sii{\red{!!}}                         &
+            X^5 - \Big(\frac{1}{2} + \frac{\sqrt{3}}{2}i \Big) \divideA X^{30} - 1
+          \end{array}
+        $$
+        Por ende el polinio $f$ divide a $X^{30} - 1$.
 
+  \item $f \divideA g$
+        Las raíces de $f$ son todas complejas, así que voy a necesitar los conjugados para tener un $g \en \reales[X]$.
+        Esto va a ser útil:
+        $$
+          \boxed{
+            (X - z)(X- \conj{z})
+            =
+            X^2 - 2\re(z)X + |z|^2
+          }\llamada1
+        $$
+        Las raíces son:
+        $$
+          \set{
+            e^{i \frac{1}{15} \pi},
+            e^{i \frac{7}{15} \pi},
+            e^{i \frac{13}{15} \pi},
+            e^{i \frac{19}{15} \pi},
+            e^{i \frac{25}{15} \pi}
+          }
+          \Entonces{agrego los}[conjugados]
+          \set{
+            e^{i \frac{1}{15} \pi},
+            e^{i \frac{1}{3} \pi},
+            e^{i \frac{7}{15} \pi},
+            e^{i \frac{11}{15} \pi},
+            e^{i \frac{13}{15} \pi},
+            e^{i \frac{17}{15} \pi},
+            e^{i \frac{19}{15} \pi},
+            e^{i \frac{23}{15} \pi},
+            e^{i \frac{5}{3} \pi},
+            e^{i \frac{29}{15} \pi}
+          }
+        $$
+        Armo el polinomio con esta bosta usando la expresión en $\llamada1$:
+        $$
+          \scriptstyle
+          g =
+          (X^2 -2\cos(\frac{1}{15}\pi) + 1) \cdot
+          (X^2 -2\cos(\frac{1}{3}\pi) + 1) \cdot
+          (X^2 -2\cos(\frac{7}{15}\pi) + 1) \cdot
+          (X^2 -2\cos(\frac{11}{15}\pi) + 1) \cdot
+          (X^2 -2\cos(\frac{13}{15}\pi) + 1)
+        $$
 
-	\item $f \divideA g$
-	      Las raíces de $f$ son todas complejas, así que voy a necesitar los conjugados para tener un $g \en \reales[X]$.
-	      Esto va a ser útil:
-	      $$
-		      \boxed{
-			      (X - z)(X- \conj{z})
-			      =
-			      X^2 - 2\re(z)X + |z|^2
-		      }\llamada1
-	      $$
-	      Las raíces son:
-	      $$
-		      \set{
-			      e^{i \frac{1}{15} \pi},
-			      e^{i \frac{7}{15} \pi},
-			      e^{i \frac{13}{15} \pi},
-			      e^{i \frac{19}{15} \pi},
-			      e^{i \frac{25}{15} \pi}
-		      }
-		      \Entonces{agrego los}[conjugados]
-		      \set{
-			      e^{i \frac{1}{15} \pi},
-			      e^{i \frac{1}{3} \pi},
-			      e^{i \frac{7}{15} \pi},
-			      e^{i \frac{11}{15} \pi},
-			      e^{i \frac{13}{15} \pi},
-			      e^{i \frac{17}{15} \pi},
-			      e^{i \frac{19}{15} \pi},
-			      e^{i \frac{23}{15} \pi},
-			      e^{i \frac{5}{3} \pi},
-			      e^{i \frac{29}{15} \pi}
-		      }
-	      $$
-	      Armo el polinomio con esta bosta usando la expresión en $\llamada1$:
-	      $$
-		      \scriptstyle
-		      g =
-		      (X^2 -2\cos(\frac{1}{15}\pi) + 1) \cdot
-		      (X^2 -2\cos(\frac{1}{3}\pi) + 1) \cdot
-		      (X^2 -2\cos(\frac{7}{15}\pi) + 1) \cdot
-		      (X^2 -2\cos(\frac{11}{15}\pi) + 1) \cdot
-		      (X^2 -2\cos(\frac{13}{15}\pi) + 1)
-	      $$
-
-	      Listo? Esto es la respuesta? \textit{Tengo miedo, estoy cansado, jefe}.
+        Listo? Esto es la respuesta? \textit{Tengo miedo, estoy cansado, jefe}.
 
 \end{enumerate}
 
 \begin{aportes}
-	\item \aporte{\dirRepo}{naD GarRaz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
 \end{aportes}
