fix ejercicio 4 item iv guia 2

--- a/2-guia/ejercicios-2/ej-4-2.tex
+++ b/2-guia/ejercicios-2/ej-4-2.tex
@@ -36,17 +36,17 @@
           }
         $
   \item $
-          \sumatoria{i=1}{2n} q^i \igual{?}
-          \llave{l}{
-            2n \text{ si } q = 1 \\
-            \frac{q^{2n-1} - q}{q-1} \text{ si } q \distinto 1
+          \sumatoria{i=n}{2n} q^i
+          =
+          \llave{rcl}{
+            n + 1 &\text{ si }& q = 1 \\
+            q^n \cdot (1+q+q^2+\cdots+q^n) = q^n \cdot \frac{q^{n+1} - 1}{q-1} &\text{ si } & q \distinto 1
           }
         $
 \end{enumerate}
 
 % Contribuciones
 \begin{aportes}
-  %% iconos : \github, \instagram, \tiktok, \linkedin
-  %\aporte{url}{nombre icono}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+  \item \aporte{https://github.com/JowinTeran}{Ale Teran \github}
 \end{aportes}
