--- a/1-guia/ejercicios-1-extra/ej-extra-5-1.tex
+++ b/1-guia/ejercicios-1-extra/ej-extra-5-1.tex
@@ -241,6 +241,6 @@
 \end{enumerate}
 
 \begin{aportes}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{https://github.com/JowinTeran}{Ale Teran \github}
 \end{aportes}
