agrego al i en 14 guia 7

--- a/7-guia/ejercicios-7-extra/ej-extra-14-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-14-7.tex
@@ -8,7 +8,7 @@
 
 Antes de empezar:
 \begin{center}
-  Recordad que los elementos de \underline{$G_n$ son de la forma $ e^{\frac{2\pi}{n}k}$ con $k \en \enteros$}
+  Recordad que los elementos de \underline{$G_n$ son de la forma $ e^{i\frac{2\pi}{n}k}$ con $k \en \enteros$}
 \end{center}
 
 Ahora sí:
