fix extra 14 guia 7

--- a/7-guia/ejercicios-7-extra/ej-extra-14-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-14-7.tex
@@ -70,9 +70,9 @@ Ahora sí:
         $$
           \begin{array}{rcl}
             x - \Big(\frac{1}{2} + \frac{\sqrt{3}}{2}i \Big) \divideA x^6 - \Big(\frac{1}{2} + \frac{\sqrt{3}}{2}i\Big)^6
-             & \Entonces{$x \to X^5$}[$a \to \alpha$] &
+             & \Entonces{$x \to X^5$} &
             X^5 - \Big(\frac{1}{2} + \frac{\sqrt{3}}{2}i \Big) \divideA (X^{5})^6 - \Big(\frac{1}{2} + \frac{\sqrt{3}}{2}i \Big)^6 \\
-             & \Sii{\red{!!}}                         &
+             & \Sii{\red{!!}}         &
             X^5 - \Big(\frac{1}{2} + \frac{\sqrt{3}}{2}i \Big) \divideA X^{30} - 1
           \end{array}
         $$
