--- a/7-guia/ejercicios-7-extra/ej-extra-3-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-3-7.tex
@@ -98,10 +98,7 @@ $$
 $$
 así cumpliendo todas las condiciones.
 
-% Contribuciones
 \begin{aportes}
-  %% iconos : \github, \instagram, \tiktok, \linkedin
-  %\aporte{url}{nombre icono}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{https://github.com/JowinTeran}{Ale Teran \github}
 \end{aportes}
