fix extra ej 6 guia 6

--- a/6-guia/ejercicios-6-extra/ej-extra-6-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-6-6.tex
@@ -61,8 +61,6 @@ de cuanta maná tengas para ejecutar un típico \faIcon{magic} \textit{matemagiu
           \begin{array}{rcl}
             (2-z^3)^4 = z^{12}
              & \sii           &
-            (2-z^3)^4 = (z^3)^4     \\
-             & \sii           &
             (2-z^3)^4 - (z^3)^4 = 0 \\
              & \Sii{\blue{!}} &
             \magenta{\big(}
@@ -81,7 +79,7 @@ de cuanta maná tengas para ejecutar un típico \faIcon{magic} \textit{matemagiu
             = 0                     \\
              & \sii           &
             \magenta{\big(}
-            2 \cdot (2-2z^3)
+            2 \cdot (1-z^3)
             \magenta{\big)^2}
             \cdot
             \parentesis{(2-z^3)^2 + (z^3)^2}^2
@@ -189,7 +187,7 @@ $$
 
 Siendo objetivos, la solución del \ref{extra6-6:item2} es la más elegante lejos, la de \ref{extra6-6:item3} es un delirio,
 pero lo importante es llegar al resultado correcto!
-Como dijo el \blue{Capitán planeta}: \textit{¡El poder es tuyo!}
+Como dijo el \blue{Capitán Planeta}: \textit{¡El poder es tuyo!}
 
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
